--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,12 +33,9 @@ dependencies:
 
   sqflite: ^2.4.0
   modal_bottom_sheet: ^3.0.0
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   get: ^4.6.6
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
