--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   get: ^4.6.6
   path: ^1.9.0
+  image_picker: ^1.1.2
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
